# yanzheng

./: .gitignore  README.md  build_cactus_dataset.py  inspect_dataset.py  package_project.py  pyproject.toml  requirements.txt  run_ai_re_judge.py  run_inference.py  run_llamascope_distribution_sanity.py  run_llamascope_variant_audit.py  run_misc_causal_candidate_export.py  run_misc_interpretability_analysis.py  run_misc_label_mapping.py  run_misc_mapping_structure_analysis.py  run_sae_checkpoint_parity.py  run_sae_evaluation.py  run_sae_forward_chain_audit.py  run_stage2_activation_extraction.py  test_ai_re_judge_smoke.py  test_behavior_interpretability.py  test_causal_candidate_export.py  test_causal_smoke.py  test_dataset_loader_smoke.py  test_deploy_smoke.py  test_mapping_structure_analysis.py  test_misc_label_mapping_smoke.py  test_pai_deploy_smoke.py  test_pipeline_smoke.py  test_sae_diagnostics_smoke.py  test_stage2_smoke.py  verify_cactus_pipeline.py
causal/: __init__.py  data.py  evaluation.py  intervention.py  run_experiment.py  selection.py
causal_validation_full/: results_group.json  results_necessity.json  results_selectivity.json  results_sufficiency.json  selected_groups.json  summary_tables.md
config/: model_config.json  sae_config.json  sae_config_smallrun.json
doc/: AI专家代理评审管线说明.md  GCE云GPU部署说明.md  MISC Mapping Structure分析报告.md  MISC全量SAE可用性分析报告.md  MISC可解释性工作本地复跑综合分析报告.md  MISC后续可解释性阶段分析报告.md  MISC后续工作与指标计算说明.md  MISC因果验证候选组说明.md  MISC数据集SAE表征映射执行大纲.md  MISC数据集代码对接说明.md  MISC矩阵生成结果评测报告.md  PAI-EAS部署运行教程.md  Pooling策略比较说明.md  RE定义与AI评审Rubric.md  (+37 more)
(+112 files in other folders)
